--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,17 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1>GENERADOR EXCUSAS</h1>
-      <p id="Excuse">hello</p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
+  <body style="text-align:center;">
+    <div class="container-fluid text-center align-self-center font size=10">
+      <h4 class="m-b=1">
+        Upps.. you will not believe me but....
+      </h4>
+      <h4>
+        this is not an excuses generator
+      </h4>
+      <p id="Excuse"></p>
+      <div class="fixed-bottom p-4  font size=6">
+        Made with a lot of ❤️ MO_by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
