--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,21 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
-  <body style="text-align:center;">
-    <div class="container-fluid text-center align-self-center font size=10">
-      <h4 class="m-b=1">
+  <body>
+    <div class="container-fluid text-center">
+      <h4 class="text-center mt-4">
         Upps.. you will not believe me but....
       </h4>
-      <h4>
-        this is not an excuses generator
-      </h4>
-      <p id="Excuse"></p>
+
+      <p id="Excuse">this is not an excuses generator</p>
       <div class="fixed-bottom p-4  font size=6">
         Made with a lot of ❤️ MO_by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
